Make button baselines take into account the vertical centering we do.  Bug 231574, r+sr=dbaron